# test_tasks

./: .gitignore  gepard task.py  pyproject.toml  pytest sms.py  sms_test.py
gepard_task/: gepard_task.py
pytest_sms/: pytest_sms.py
sms/: sms.py
sms_and_sms_test/: pytest_sms.py  sms.py  sms_test.py
sms_test/: sms_test.py
test_mojeid_registration/: test_mojeid_registration.py
